--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,104 +234,169 @@ jobs:
           name: Publish to GitHub
           command: semantic-release
 
+  experimental-release:
+    <<: *defaults
+    docker:
+      - image: circleci/node:<< parameters.node_version >>
+    resource_class: small
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 19.03.13
+      - run:
+          name: Install gh (GitHub CLI)
+          command: |
+            mkdir gh-download
+            curl -Lo ./gh-download/gh_1.3.1_linux_amd64.tar.gz https://github.com/cli/cli/releases/download/v1.3.1/gh_1.3.1_linux_amd64.tar.gz
+            tar -xf ./gh-download/gh_1.3.1_linux_amd64.tar.gz --directory gh-download
+            chmod a+x gh-download/gh_1.3.1_linux_amd64/bin/gh
+            mkdir -p /home/circleci/bin
+            mv gh-download/gh_1.3.1_linux_amd64/bin/gh /home/circleci/bin
+            which gh
+            gh --version
+      - run:
+          name: Check npm version
+          command: |
+            npm --version
+            sudo npm install -g npm@7
+            npm --version
+      - run:
+          name: Setup Lerna
+          command: sudo npm install -g lerna
+      - run:
+          name: npm install
+          command: |
+            npm install
+            ls -la
+            ls -la packages/cli-protect
+
+      # Pseudo because lerna doesn't have an actualy --dry run and --canary is not the same thing
+      # the `--skip-git` and `--skip-npm` options make it pseudo `--dry-run`
+      - run:
+          name: Pseudo Lerna Dry Run  
+          command: |
+            lerna publish minor --skip-git --skip-npm --yes --registry=https://registry.npmjs.org
+
+      - run:
+          name: Create Binaries
+          command: |
+            echo '' > dist/STANDALONE
+            npx pkg . -t node14-alpine-x64 -o snyk-alpine
+            npx pkg . -t node12-linux-x64 -o snyk-linux
+            npx pkg . -t node12-macos-x64 -o snyk-macos
+            npx pkg . -t node12-win-x64 -o snyk-win.exe
+            # TODO: build docker release
+            # TODO: sign win binary
+            # TODO: shasum for win?
+            shasum -a 256 snyk-linux > snyk-linux.sha256 && shasum -a 256 snyk-macos > snyk-macos.sha256 && shasum -a 256 snyk-alpine > snyk-alpine.sha256
+            ls -la
+
 workflows:
   version: 2
   test_and_release:
     jobs:
-      - regression-test:
-          name: Regression Test
-          context: nodejs-install
-          node_version: '8'
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-windows:
-          name: Windows Tests for Node v12 support
-          context: nodejs-install
-          node_version: '12.0.0'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-windows:
-          name: Windows Tests for Node v14 support
-          context: nodejs-install
+      - experimental-release:
+          name: Experimental Release
           node_version: '14'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-windows:
-          name: Windows Tests for Node v10 support
-          context: nodejs-install
-          node_version: '10.21.0'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-windows:
-          name: Windows Tests for Node v8 support
-          context: nodejs-install
-          node_version: '8.17.0'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-unix:
-          name: Unix Tests for Node v12 support
-          context: nodejs-install
-          node_version: '12.16.2'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-unix:
-          name: Unix Tests for Node v14 support
-          context: nodejs-install
-          node_version: '14'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-unix:
-          name: Unix Tests for Node v10 support
-          context: nodejs-install
-          node_version: '10'
-          requires:
-            - Regression Test
-          filters:
-            branches:
-              ignore:
-                - master
-      - test-unix:
-          name: Unix Tests for Node v8 support
-          context: nodejs-install
-          node_version: '8'
-          requires:
-            - Regression Test
           filters:
             branches:
               ignore:
                 - master
 
-      - release:
-          name: Release
-          context: nodejs-app-release
-          node_version: '14'
-          filters:
-            branches:
-              only:
-                - master
+      # - regression-test:
+      #     name: Regression Test
+      #     context: nodejs-install
+      #     node_version: '8'
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-windows:
+      #     name: Windows Tests for Node v12 support
+      #     context: nodejs-install
+      #     node_version: '12.0.0'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-windows:
+      #     name: Windows Tests for Node v14 support
+      #     context: nodejs-install
+      #     node_version: '14'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-windows:
+      #     name: Windows Tests for Node v10 support
+      #     context: nodejs-install
+      #     node_version: '10.21.0'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-windows:
+      #     name: Windows Tests for Node v8 support
+      #     context: nodejs-install
+      #     node_version: '8.17.0'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-unix:
+      #     name: Unix Tests for Node v12 support
+      #     context: nodejs-install
+      #     node_version: '12.16.2'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-unix:
+      #     name: Unix Tests for Node v14 support
+      #     context: nodejs-install
+      #     node_version: '14'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-unix:
+      #     name: Unix Tests for Node v10 support
+      #     context: nodejs-install
+      #     node_version: '10'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+      # - test-unix:
+      #     name: Unix Tests for Node v8 support
+      #     context: nodejs-install
+      #     node_version: '8'
+      #     requires:
+      #       - Regression Test
+      #     filters:
+      #       branches:
+      #         ignore:
+      #           - master
+
+      # - release:
+      #     name: Release
+      #     context: nodejs-app-release
+      #     node_version: '14'
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
